--- a/src/components/navBtn/navBtn.scss
+++ b/src/components/navBtn/navBtn.scss
@@ -2,7 +2,7 @@
   cursor: pointer;
   position: fixed;
   top: 4rem;
-  right: 8rem;
+  right: 12rem;
   width: 3.5rem;
   height: 3.5rem;
   border-radius: 50%;
